force-app/main/default/objects/P3_CheckList__CheckListView_Setting__c/P3_CheckList__CheckListView_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>CheckListView Setting</label>
</CustomObject>