force-app/main/default/objects/P3_CheckList__CheckListView_Setting__c/fields/P3_CheckList__Edit_Access__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Edit_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Access</label>
    <type>Checkbox</type>
</CustomField>