force-app/main/default/objects/P3_CheckList__CheckListView_Setting__c/fields/P3_CheckList__Is_Group_Collapse__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Is_Group_Collapse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Group Collapse?</label>
    <type>Checkbox</type>
</CustomField>