force-app/main/default/objects/P3_CheckList__CheckListView_Setting__c/fields/P3_CheckList__Is_Name_Column_a_link__c.field-meta.xml
<CustomField>
    <fullName>P3_CheckList__Is_Name_Column_a_link__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Name Column a link?</label>
    <type>Checkbox</type>
</CustomField>